# FiSH-irssi

./: CMakeLists.txt
src/: CMakeLists.txt  FiSH.c  FiSH.h  XSalsa20Poly1305.h
